src/test/resources/invalid_tests/InvalidOutputMultipleVariableFCs.cnna
architecture InvalidOutputMultipleVariableFCs{
    def input in
    def output out
    
    in ->
    fullyConnected(units=64)
    activation.tanh()
    output {
        fullyConnected()
        activation.tanh()
        fullyConnected()
        activation.softmax()
    } -> out
}